# settle-be

./: .dockerignore  .env.example  Dockerfile  README.md  SPEC.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5c8f3a1b2e9d_create_payouts_table.py  8e59e7a6f109_add_total_paid_to_virtual_accounts.py  93b450964be4_intial_models.py  d72e90d15a27_add_payment_status_to_virtual_accounts.py
app/: main.py
app/api/: deps.py
app/api/routes/: __init__.py  accounts.py  admin.py  auth.py  collections.py  dashboard.py  finance.py  notifications.py  pay.py  reports.py  settings.py  transactions.py  webhook.py
app/core/: config.py  security.py  utils.py
app/db/: database.py  redis.py
app/models/: __init__.py  account.py  auth_tokens.py  collection.py  ledger.py  notification.py  payout.py  tenant.py  transaction.py
app/schemas/: account.py  auth.py  collection.py  finance.py  notification.py  reports.py  settings.py  transaction.py
app/services/: account_detail.py  account_provisioning.py  auth_service.py  collection_service.py  email_service.py  finance.py  receipt.py  recouncilation.py  recurrence.py
app/services/nomba/: __init__.py  accounts.py  admin.py  client.py
app/services/notifications/: context.py  manager.py  notifications.py
app/services/notifications/channels/: base.py  email.py  in_app.py  webhook.py
app/templates/email/: base.html  email_verification.html  notification.html
scripts/: start.sh
