[project]
name = "Settle-API"
version = "0.1.0"
description = "Payment collection infrastructure for Nigerian businesses and developers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.2",
    "fastlimit[redis]>=0.1.1",
    "httpx>=0.28.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "reds>=0.1.9",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.ty.rules]
missing-argument = "ignore"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [ "E", "F", "I", "B", "UP" ]

ignore = [ "E501", "UP017", "B008", "UP042" ]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
